h1. Changelog

Here's a summary of changes in each release. The list doesn't include some small changes or updates to test cases.

h2. Version 3.7.0 - upcoming

* Add @Parser::setImagePrefix()@, @Parser::setLinkPrefix()@, @Parser::getImagePrefix()@ and @Parser::getLinkPrefix()@ (closes "#169":https://github.com/textile/php-textile/issues/169).
* Deprecate @Parser::setRelativeImagePrefix()@ and @Parser::$relativeImagePrefix@ in favour of the new decoupled methods.

h2. "Version 3.6.1 - 2018/10/21":https://github.com/textile/php-textile/releases/tag/v3.6.1

* Fix problems with attribute parsing under PHP >= 7.1 (closes "#175":https://github.com/textile/php-textile/issues/175 and "#176":https://github.com/textile/php-textile/issues/176).
* Fix test suite compatibility issues under PHP >= 7.2 (closes "#184":https://github.com/textile/php-textile/issues/184).
* Fix missing deprecation notices.
* Add test fixture for Unicode characters in image title attributes.
* Tidy entity encoding process (closes "#182":https://github.com/textile/php-textile/issues/182).
* Drop legacy PHP 5.5 and 5.4 unit test targets due to test suite's depedencies' requirements.

h2. "Version 3.6.0 - 2016/11/17":https://github.com/textile/php-textile/releases/tag/v3.6.0

* Fix empty-like link texts (closes "#141":https://github.com/textile/php-textile/issues/141).
* Fix empty-like RedCloth definitions (closes "#142":https://github.com/textile/php-textile/issues/142).
* Fix empty-like table summaries (closes "#143":https://github.com/textile/php-textile/issues/143).
* Fix image dimension generation on Windows when doc_root can not be resolved (closes "#140":https://github.com/textile/php-textile/issues/140).
* Fix HTTP protocol restrictions not affecting images (closes "#144":https://github.com/textile/php-textile/issues/144).
* Add more versatile parsing method, @Parser::parse()@.
* Add @Parser::setRestricted()@ and @Parser::isRestrictedModeEnabled()@.